# bioreactor-digital-twin

./: .gitignore  README.md  pyproject.toml
bioreactor/: feeds.py  kinetics.py  model_types.py  models.py  params.py  sensitivity.py  simulate.py  state.py  steady_state.py  validation.py
notebooks/: bioreactor_digital_twin.py
tests/: test_bioreactor_invariants.py  test_fed_batch_invariants.py  test_feeds.py  test_sensitivity.py
